<resources>
    <string name="app_name">Moj mejl</string>
    <string name="button">Button</string>
    <string name="vreme_osvezavanja">Vreme osvezavanja</string>
    <string name="sortiraj_poruke">Sortiraj poruke:</string>
    <string name="korisnicko_ime">Korisnicko ime:</string>
    <string name="lozinka">Lozinka:</string>
    <string name="kome">Kome:</string>
    <string name="od">Od:</string>
    <string name="naslov">Naslov:</string>
    <string name="sadr_aj">Sadržaj:</string>

    <string name="sadr_aj_poruke">Sadržaj poruke:</string>
    <string name="kreiraj_kontakt">Kreiraj kontakt</string>
    <string name="kontakt">Kontakt</string>
    <string name="kreiraj_e_mail">Kreiraj e-mail</string>
    <string name="email">Email</string>
    <string name="folder_i">Folder-i</string>
    <string name="kreirajfolder">KreirajFolder</string>
    <string name="folder">Folder</string>
    <string name="settings">Podešavanja</string>

    <string name="action_search">Pretraži...</string>
    <string name="action_new">Nova poruka</string>
    <string name="action_send">Pošalji</string>
    <string name="action_cancel">Odustani</string>
    <string name="action_back">Prethodna strana</string>
    <string name="action_replay">Odgovori</string>
    <string name="action_replay_to_all">Odgovori svima</string>
    <string name="action_forward">Prosledi</string>
    <string name="action_delete">Obrisi</string>
    <string name="image">Slika moj profil</string>
    <string name="all_folders">Direktorijumi</string>
    <string name="poruke">Poruke</string>
    <string name="my_profile">Moj profil</string>
    <string name="logout">Odjavi se</string>

    <string name="kontakti">Kontakti</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="autosync_problem">Automatic Sync problem</string>
    <string name="no_internet">Bad news, no internet connection</string>
    <string name="turn_wifi_on">Turn wifi on</string>
    <string name="turn_notif_on">Stop notification</string>
    <string name="autosync_warning">Automatic Sync warning</string>
    <string name="connect_to_wifi">Please connect to wifi to sync data</string>
    <string name="autosync">Automatic Sync</string>
    <string name="good_news_sync">Good news, everything is sync now.</string>
    <string name="notif_on_sync_key">notif_on_sync</string>
    <string name="pref_sync_list">pref_sync_list</string>
    <string name="pref_sync">pref_sync</string>
    <string name="opis_sortiranja">Izaberite kriterijum po kome ce biti sortirane poruke</string>
    <string name="pref_sync_title">Sinhronizacija</string>
    <string name="pref_syncConnectionType">Interval sinhronizacije</string>
    <string name="sortiranje">Sortiranje</string>
    <string name="sort">pref_sort</string>
    <string name="preferences">Podešavanja</string>
    <string name="message">Poruka</string>
    <string name="login1"></string>
    <string name="action_save">Sačuvaj</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="idList"></string>
</resources>
