<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Podešavanja"
        android:key="sync_settings">

        <ListPreference
            android:dialogTitle="@string/pref_syncConnectionType"
            android:entries="@array/vreme"
            android:entryValues="@array/pref_syncConnectionTypes_values"
            android:key="@string/pref_sync_list"
            android:title="@string/pref_syncConnectionType"
            android:summary="%s"
            android:defaultValue="1"/>

        <ListPreference
            android:dialogTitle="@string/sortiranje"
            android:entries="@array/sortiranje"
            android:entryValues="@array/sortiranje"
            android:key="@string/sort"
            android:title="@string/sortiranje"
            android:summary="@string/opis_sortiranja"
            android:defaultValue="Opadajuce"/>

    </PreferenceCategory>

</PreferenceScreen>