<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/delete"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_replay"
        android:title="@string/action_replay"
        android:icon="@drawable/replay"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_replay_to_all"
        android:title="@string/action_replay_to_all"
        android:icon="@drawable/replay_all"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_forward"
        android:title="@string/action_forward"
        android:icon="@drawable/forward"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>

</menu>